--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@
 
 plugins {
     id 'java'
+    id 'maven'
 }
 
 group 'net.smoofyuniverse'
+version = '1.0.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
