--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,86 @@
 plugins {
     id 'java'
     id 'maven'
+    id 'signing'
 }
 
 group 'net.smoofyuniverse'
-version = '1.0.0'
+archivesBaseName = 'smoofylogger-slf4j'
+version = '1.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    mavenLocal()
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
 }
 
 dependencies {
-    compile 'net.smoofyuniverse:SmoofyLogger:1.0.0'
+    compile 'net.smoofyuniverse:smoofylogger:1.0.0-SNAPSHOT'
     compile 'org.slf4j:slf4j-api:1.7.25'
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'SmoofyLogger-SLF4J'
+                packaging 'jar'
+                description 'Implementation of SLF4J\'s API using SmoofyLogger.'
+                url 'https://github.com/Yeregorix/SmoofyLogger-SLF4J'
+
+                scm {
+                    connection 'scm:git:https://github.com/Yeregorix/SmoofyLogger-SLF4J.git'
+                    developerConnection 'scm:git:https://github.com/Yeregorix/SmoofyLogger-SLF4J.git'
+                    url 'https://github.com/Yeregorix/SmoofyLogger-SLF4J'
+                }
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'https://opensource.org/licenses/MIT'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'Yeregorix'
+                        name 'Hugo Dupanloup'
+                        email 'yeregorix@smoofyuniverse.net'
+                    }
+                }
+            }
+        }
+    }
 }
