--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@
 plugins {
     id 'java'
     id 'maven'
-    id 'signing'
 }
 
 group 'net.smoofyuniverse'
@@ -59,8 +58,11 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-signing {
-    sign configurations.archives
+if (project.hasProperty("signing.keyId")) {
+    apply plugin: 'signing'
+    signing {
+        sign configurations.archives
+    }
 }
 
 uploadArchives {
@@ -69,11 +71,11 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
             }
 
             pom.project {
